--- a/Zelinsky_labs/View/WindowVerietyPerson.xaml
+++ b/Zelinsky_labs/View/WindowVerietyPerson.xaml
@@ -6,7 +6,14 @@
         xmlns:local="clr-namespace:Zelinsky_labs.View"
         mc:Ignorable="d"
         Title="Вид клиента" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+    <ListView x:Name="lvPerson">
+        <ListView.View>
+            <GridView>
+                <GridView.Columns>
+                    <GridViewColumn Header="Номер" Width="50" DisplayMemberBinding="{Binding Id}"/>
+                    <GridViewColumn Header="Вид клиента" Width="100" DisplayMemberBinding="{Binding Veriety}"/>
+                </GridView.Columns>
+            </GridView>
+        </ListView.View>
+    </ListView>
 </Window>
